--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
-<div ng-app="testMod" ng-controller="testCtrl">
+<body>
+<div>
     <p>Basic Mode: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
     <div class="modal-dialog">
         <div class="modal-content">
-            <time-date-picker ng-model="date"></time-date-picker>
-        </div>
     </div>
     <p>Full Mode: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
     <div class="modal-dialog">
         <div class="modal-content">
-            <time-date-picker ng-model="date" data-display-mode="full"></time-date-picker>
+            <div ng-model="date" data-display-mode="full"></div>
         </div>
     </div>
     <p>Start on Time, With 24 Hour: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
     <div class="modal-dialog">
         <div class="modal-content">
-            <time-date-picker ng-model="date" default-mode="time" display-twentyfour="true"></time-date-picker>
+            <div ng-model="date" default-mode="time" display-twentyfour="true"></time-date-picker>
         </div>
     </div>
     <p>Time Only: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
@@ -32,6 +31,7 @@
         </div>
     </div>
     <p>Date Only: {{date | date:'yyyy/MM/dd HH:mm a'}}</p>
+    </div>
     <div class="modal-dialog">
         <div class="modal-content">
             <time-date-picker ng-model="date" display-mode="date"></time-date-picker>
@@ -141,9 +141,9 @@
     </script>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular-animate.min.js"></script>
-<body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"></script>
 
 </body>
 </html>
